--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Affichage
+      run: ls ./build/libs/*
+      
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
