--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Affichage
-      run: ls ./build/
+      run: ls ./build/libs/*
 
 
     - name: Build with Gradle
